--- a/introduction.tex
+++ b/introduction.tex
@@ -61,7 +61,7 @@ dependencies and avoid or resolve conflicts. For instance, various
 CRDT variants of the set abstract data type rely on \emph{vector
 clocks} to identify conflicting \C{add}s and
 \C{remove}s~\cite{zawirski-thesis, zhang}, Replicated Growable Array
-(RGA) -- a CRDT for collaborative editing~\cite{rga} and JSON CRDT --
+(RGA) -- a CRDT for collaborative editing~\cite{rga}, and JSON CRDT --
 a CRDT variant of the JSON storage format, both use \emph{Lamport
 timestamps}~\cite{rga, json-crdt}; and TreeDoc, another CRDT for
 collaborative editing, makes use of \emph{dense linear
