--- a/mydefs.tex
+++ b/mydefs.tex
@@ -247,3 +247,9 @@ morekeywords={oper, txn, invariant, module, begin, match, when, @@deriving, not,
 \newcommand{\entails}{\vDash}
 \newcommand{\M}{\mathcal{M}}
 \newcommand{\colondash}{~\operatorname{:-}~}
+\newcommand{\cedge}{\xrightarrow{c}}
+\newcommand{\fedge}{\xrightarrow{f}}
+\newcommand{\medge}{\xrightarrow{m}}
+\newcommand{\fmedges}{\xrightarrow{f,m}\!\!^{*}}
+\newcommand{\reaches}{\rightarrow^{*}}
+\newcommand{\reachable}{\leftrightarrow^{*}}
