--- a/quark.tex
+++ b/quark.tex
@@ -218,6 +218,8 @@ Convergence in Replicated Data Types}      %% [Short Title] is optional;
 
 \input{motivation}
 
+\input{vc-semantics}
+
 
 %% Acknowledgments
 \begin{acks}                            %% acks environment is optional
