--- a/quark.tex
+++ b/quark.tex
@@ -220,6 +220,8 @@ Convergence in Replicated Data Types}      %% [Short Title] is optional;
 
 \input{vc-semantics}
 
+\input{concrete-semantics}
+
 
 %% Acknowledgments
 \begin{acks}                            %% acks environment is optional
