--- a/vc-semantics.tex
+++ b/vc-semantics.tex
@@ -206,7 +206,7 @@ conclusion of the \rulelabel{Merge} captures this update using the set
 comprehension notation. It also updates the LCA of the merging
 branches $L(b,b')$ to $H(b')$ since the head of $b'$ is merged into
 $b$. Updates to the other components of the state (e.g., $C$) follow
-the same rational as previours rules. Two edges are added to $E$ as
+the same rationale as previours rules. Two edges are added to $E$ as
 the new version $v$ is a descendent of the two merging versions.
 
 Another notable aspect of the \rulelabel{Merge} rule is the invocation
